# http_benchmarks

./: Dockerfile  README.md  catalog.proto  catalog_pb2.py  catalog_pb2_grpc.py  cert.pem  docker-compose.yml  grpc_app.py  grpc_test.js  grpc_test_2.js  grpc_test_3.js  healthcheck.py  http3_load_test.py  http_3_app.py  http_3_app_2.py  http_3_app_example.py  http_app.py  http_comparison_test copy.py  http_comparison_test.py  http_test.js  hypercorn.toml  key.pem  main.py  products copy.json  products.json  pyproject.toml  requirements.txt  setup_network.sh  test.sh  test_client.py
res/: products
